--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -88,8 +88,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="e0t-yW-wdV">
-                                <rect key="frame" x="20" y="160" width="374" height="690"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="e0t-yW-wdV">
+                                <rect key="frame" x="20" y="160" width="374" height="682"/>
                                 <subviews>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="0Ps-11-ugj">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
@@ -107,11 +107,8 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="9wz-fZ-FAo">
-                                        <rect key="frame" x="0.0" y="105" width="374" height="585"/>
+                                        <rect key="frame" x="0.0" y="105" width="374" height="577"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="585" id="ClA-Ce-rm8"/>
-                                        </constraints>
                                         <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -120,6 +117,12 @@
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="0.95305365296803635" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="e0t-yW-wdV" firstAttribute="top" secondItem="kgY-ff-Xhc" secondAttribute="top" constant="20" id="862-Gl-V7r"/>
+                            <constraint firstItem="kgY-ff-Xhc" firstAttribute="bottom" secondItem="e0t-yW-wdV" secondAttribute="bottom" constant="20" id="b9U-ld-qfG"/>
+                            <constraint firstItem="e0t-yW-wdV" firstAttribute="leading" secondItem="kgY-ff-Xhc" secondAttribute="leading" constant="20" id="eP4-XA-DWs"/>
+                            <constraint firstItem="kgY-ff-Xhc" firstAttribute="trailing" secondItem="e0t-yW-wdV" secondAttribute="trailing" constant="20" id="jLr-9S-haH"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="kgY-ff-Xhc"/>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="9d1-Tn-qAF">
