--- a/ios-Journal-coredata/ios-Journal-coredata/Resources/Base.lproj/Main.storyboard
+++ b/ios-Journal-coredata/ios-Journal-coredata/Resources/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wZb-Va-8f9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wZb-Va-8f9">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,13 +10,13 @@
         <!--Journal-->
         <scene sceneID="xae-tP-ao7">
             <objects>
-                <tableViewController id="Vnp-AM-wk6" customClass="JournalTableViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="Vnp-AM-wk6" customClass="JournalTableViewController" customModule="ios_Journal_coredata" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="KrN-qT-dMl">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryTableViewCell" rowHeight="80" id="j9i-Ye-tQf" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryTableViewCell" rowHeight="80" id="j9i-Ye-tQf" customClass="EntryTableViewCell" customModule="ios_Journal_coredata" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="80"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="j9i-Ye-tQf" id="Ih4-eO-76s">
@@ -80,32 +80,43 @@
         <!--Title-->
         <scene sceneID="sb7-Ht-62W">
             <objects>
-                <viewController id="10f-CR-XdI" customClass="DetailViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="10f-CR-XdI" customClass="DetailViewController" customModule="ios_Journal_coredata" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Dfc-lJ-2jd">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zB9-6s-vsy">
-                                <rect key="frame" x="20" y="160" width="374" height="34"/>
+                                <rect key="frame" x="20" y="166" width="374" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="9wz-fZ-FAo">
-                                <rect key="frame" x="20" y="214" width="374" height="668"/>
+                                <rect key="frame" x="20" y="220" width="374" height="662"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Rfm-UQ-LEp">
+                                <rect key="frame" x="20" y="133" width="374" height="32"/>
+                                <segments>
+                                    <segment title="😁"/>
+                                    <segment title="😐"/>
+                                    <segment title="🥺"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="9wz-fZ-FAo" firstAttribute="bottom" secondItem="kgY-ff-Xhc" secondAttribute="bottom" constant="20" id="F19-Bo-NNZ"/>
+                            <constraint firstItem="Rfm-UQ-LEp" firstAttribute="top" secondItem="Dfc-lJ-2jd" secondAttribute="topMargin" constant="-7" id="Gyp-B1-DO8"/>
                             <constraint firstItem="kgY-ff-Xhc" firstAttribute="trailing" secondItem="zB9-6s-vsy" secondAttribute="trailing" constant="20" id="Kv5-5A-AWZ"/>
-                            <constraint firstItem="zB9-6s-vsy" firstAttribute="top" secondItem="kgY-ff-Xhc" secondAttribute="top" constant="20" id="O5Y-sg-gjp"/>
+                            <constraint firstItem="zB9-6s-vsy" firstAttribute="top" secondItem="Rfm-UQ-LEp" secondAttribute="bottom" constant="2" id="O5Y-sg-gjp"/>
+                            <constraint firstItem="Rfm-UQ-LEp" firstAttribute="trailing" secondItem="zB9-6s-vsy" secondAttribute="trailing" id="dAe-kr-a6r"/>
                             <constraint firstItem="zB9-6s-vsy" firstAttribute="leading" secondItem="kgY-ff-Xhc" secondAttribute="leading" constant="20" id="jWW-Hv-7rg"/>
                             <constraint firstItem="9wz-fZ-FAo" firstAttribute="top" secondItem="zB9-6s-vsy" secondAttribute="bottom" constant="20" id="kek-TV-gmT"/>
                             <constraint firstItem="kgY-ff-Xhc" firstAttribute="trailing" secondItem="9wz-fZ-FAo" secondAttribute="trailing" constant="20" id="mWN-fP-jko"/>
+                            <constraint firstItem="Rfm-UQ-LEp" firstAttribute="leading" secondItem="zB9-6s-vsy" secondAttribute="leading" id="vRZ-dg-bnI"/>
                             <constraint firstItem="9wz-fZ-FAo" firstAttribute="leading" secondItem="kgY-ff-Xhc" secondAttribute="leading" constant="20" id="zEV-Ty-QpI"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="kgY-ff-Xhc"/>
@@ -120,6 +131,7 @@
                     <connections>
                         <outlet property="entryText" destination="9wz-fZ-FAo" id="cfC-ap-Bnb"/>
                         <outlet property="entryTitle" destination="zB9-6s-vsy" id="h0H-0n-zRx"/>
+                        <outlet property="moodSegmentedControl" destination="Rfm-UQ-LEp" id="3SM-Vw-IzR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1co-wq-Vgw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -146,6 +158,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Nyr-qf-MWe"/>
+        <segue reference="LIt-55-ehM"/>
     </inferredMetricsTieBreakers>
 </document>
