Debugged Project. Finished

--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="80"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yM2-B1-e7a">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yM2-B1-e7a">
                                             <rect key="frame" x="20" y="8" width="64" height="24"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                             <nil key="textColor"/>
@@ -36,7 +36,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="trw-rV-d5o">
-                                            <rect key="frame" x="20" y="49" width="39.5" height="20"/>
+                                            <rect key="frame" x="20" y="49" width="374" height="20"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="20" id="UL4-vO-2T2"/>
                                             </constraints>
@@ -52,6 +52,7 @@
                                         <constraint firstItem="zJ6-vj-GF2" firstAttribute="top" secondItem="Ih4-eO-76s" secondAttribute="top" constant="8" id="Y92-Xa-naM"/>
                                         <constraint firstItem="trw-rV-d5o" firstAttribute="leading" secondItem="Ih4-eO-76s" secondAttribute="leadingMargin" id="Zql-ou-Bmk"/>
                                         <constraint firstItem="trw-rV-d5o" firstAttribute="bottom" secondItem="Ih4-eO-76s" secondAttribute="bottomMargin" id="fax-pN-UIK"/>
+                                        <constraint firstItem="trw-rV-d5o" firstAttribute="trailing" secondItem="Ih4-eO-76s" secondAttribute="trailingMargin" id="kFJ-93-HCd"/>
                                         <constraint firstAttribute="trailing" secondItem="zJ6-vj-GF2" secondAttribute="trailing" constant="20" id="xaD-tc-sXA"/>
                                     </constraints>
                                 </tableViewCellContentView>
