--- a/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Base.lproj/Main.storyboard
@@ -56,7 +56,7 @@
                                     <outlet property="bodyText" destination="QvU-Pa-uYV" id="W7n-Jx-dUa"/>
                                     <outlet property="timeStamp" destination="pdK-fR-2gK" id="R2V-pi-7z4"/>
                                     <outlet property="titleLabel" destination="jTB-P3-lrx" id="0Ye-Aa-1ZW"/>
-                                    <segue destination="80f-iC-mNU" kind="show" id="Mdu-zg-60O"/>
+                                    <segue destination="80f-iC-mNU" kind="show" identifier="ShowJournalEntry" id="Mdu-zg-60O"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -68,7 +68,7 @@
                     <navigationItem key="navigationItem" title="Journal" id="5Y3-Fv-5zP">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="ip3-UD-Dyc">
                             <connections>
-                                <segue destination="80f-iC-mNU" kind="show" identifier="ShowJournalEntry" id="6K1-PB-4Jg"/>
+                                <segue destination="80f-iC-mNU" kind="show" identifier="AddJournalEntry" id="6K1-PB-4Jg"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
