Changed the initializers for mood: MoodStates to moos: String

--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -138,7 +138,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="segmentedControl" destination="HDA-32-fQF" id="mAf-CI-ReZ"/>
+                        <outlet property="moodSegmentedControl" destination="HDA-32-fQF" id="mAf-CI-ReZ"/>
                         <outlet property="textViewField" destination="8I5-Gi-AR6" id="UpG-r6-Zbc"/>
                         <outlet property="titleTextField" destination="qyc-zd-Pws" id="Lvw-r2-I04"/>
                     </connections>
